tests/baselines/reference/stringLiteralTypesWithTemplateStrings01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings01.ts(1,5): error TS2322: Type 'string' is not assignable to type '"ABC"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings01.ts(2,5): error TS2322: Type 'string' is not assignable to type '"DE\nF"'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings01.ts(5,5): error TS2322: Type 'string' is not assignable to type '"JK`L"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings01.ts (3 errors) ====
    let ABC: "ABC" = `ABC`;
        ~~~
!!! error TS2322: Type 'string' is not assignable to type '"ABC"'.
    let DE_NEWLINE_F: "DE\nF" = `DE
        ~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type '"DE\nF"'.
    F`;
    let G_QUOTE_HI: 'G"HI';
    let JK_BACKTICK_L: "JK`L" = `JK\`L`;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type '"JK`L"'.